# parallel-processing

./: CMakeLists.txt
solving-ordinary-differential-equations/: CMakeLists.txt  lab_parallel_4.sln
solving-ordinary-differential-equations/lab_parallel_4/: ODE.cpp  lab_parallel_4.vcxproj  lab_parallel_4.vcxproj.filters
solving-polynomial-equations/: CMakeLists.txt  lab_parallel_3.sln
solving-polynomial-equations/lab_parallel_3/: lab_parallel_3.vcxproj  source.cpp
vector-and-matrix-operations/: CMakeLists.txt  lab_parallel_2.sln  matrix.cpp  parallel_matrix.cpp  parallel_matrix.h  parallel_vector.h  test.cpp  vector.cpp
vector-and-matrix-operations/lab_parallel_2/: lab_parallel_2.vcxproj  lab_parallel_2.vcxproj.filters  linear_system.cpp  matrix.h  parallel_vector.cpp  vector.h
